# miniprogram-minium-cli

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish-canary-pr.yml  publish-prerelease.yml  publish-release.yml
docs/: API_REFERENCE.md  API_REFERENCE.zh-CN.md  CHANGELOG.zh-CN.md  CONTRIBUTING.zh-CN.md  README.zh-CN.md
examples/: placeholder-login.plan.json
examples/demo-miniapp/: README.md  package-lock.json  package.json  pnpm-lock.yaml  project.config.json  tsconfig.json
examples/demo-regression/: 01-login-to-home.exact.plan.json  02-home-practice-save.mixed.plan.json  03-home-search.fuzzy.plan.json  04-gesture-tap.exact.plan.json  07-review-board.mixed.plan.json  (+12 more)
python/: README.md  pyproject.toml
python/miniprogram_minium_cli/: __init__.py  __main__.py  engine.py
python/miniprogram_minium_cli/adapters/: __init__.py
python/miniprogram_minium_cli/adapters/minium/: __init__.py  runtime.py
python/miniprogram_minium_cli/domain/: __init__.py  action_models.py  action_service.py  errors.py  gesture_service.py  network_models.py  network_service.py  session_models.py  session_repository.py  session_service.py
python/miniprogram_minium_cli/support/: __init__.py  artifacts.py  config.py  i18n.py  logging.py
src/: i18n.ts  index.ts  plan.ts  runtime.ts  skills.ts
tests/: cli.test.ts  network-filter.test.ts  network-fixture-server.test.ts  network-service.test.ts  plan.test.ts  release.test.ts  runtime.test.ts  smoke.test.ts
(+104 files in other folders)
